# vec-chip8

./: README.md  addresses.json  chip8.py  chip8_np.py  chip8_vec.py  chip8_vec_cp.py  chip8_vec_cp2.py  chip8_vec_th.py  performance.ipynb  pyproject.toml
data/: raw_results.csv
games/: pong_1p.c8
notebooks/: raw_performance.ipynb
vec_chip8/emulators/: chip8.py  chip8_np.py  chip8_vec.py  chip8_vec2.py  chip8_vec_cp.py  chip8_vec_jax.py  chip8_vec_th.py  chip8_vec_th2.py
