[tool.poetry]
name = "vec-chip8"
version = "0.1.0"
description = ""
authors = ["Victor Severo <victor.severo.miranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
numpy = "^2.1.2"
torch = "^2.5.1"
jax = {extras = ["cuda12"], version = "^0.4.35"}


[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
tqdm = "^4.67.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
